Create json files for settings. Edit i18n into settings (at header.jsx).

--- a/public/locales/en/en-settings.json
+++ b/public/locales/en/en-settings.json
@@ -1,7 +1,5 @@
 {
-    "dashboard" : {
-        "title": "Dashboard",
-        "subtitle": "Welcome to the dashboard",
-        "test" : "This text changes color based on the theme {{lang}}."
-    }
+    "settings": "Settings",
+    "admin": "Admin Panel",
+    "logout": "Logout"
 }
