--- a/public/locales/malay/malay-common.json
+++ b/public/locales/malay/malay-common.json
@@ -1,3 +1,19 @@
 {
-    "test": "Text ini berubah warna mengikut tema {{lang}}."
+    "button": {
+        "submit": "Hantar",
+        "search": "Cari",
+        "filter": "Tapis",
+        "save": "Simpan",
+        "upload" : "Muat naik",
+        "download": "Muat turun",
+        "bulk_process" : "banyak banyak process"
+    },
+    "table": {
+        "name": "Nama",
+        "role": "Peranan",
+        "group": "Kumpulan",
+        "amount": "Jumlah",
+        "date": "Tarikh",
+        "action" : "Tindakan"
+    }
 }
