Fetch info for adminPanel|workspace dashboard from backend. Update settings Json. Update i18n in settings modal.

--- a/public/locales/en/en-settings.json
+++ b/public/locales/en/en-settings.json
@@ -1,5 +1,17 @@
 {
-    "settings": "Settings",
+    "settings": {
+        "title": "Settings",
+        "theme": {
+            "tab": "Theme",
+            "title": "Theme Settings",
+            "light": "Light Mode",
+            "dark": "Dark Mode"
+        },
+        "language": {
+            "tab": "Language",
+            "title": "Language Settings"
+        }
+    },
     "admin": "Admin Panel",
     "logout": "Logout"
 }
