Add an entry into common json. Add Toast into requestModal. Fix typo in UserManagement.

--- a/public/locales/en/en-common.json
+++ b/public/locales/en/en-common.json
@@ -16,6 +16,7 @@
         "date": "Date",
         "action": "Action",
         "sender": "Sender",
-        "receiver": "Receiver"
+        "receiver": "Receiver",
+        "reason": "Reason"
     }
 }
