--- a/public/locales/malay/malay-common.json
+++ b/public/locales/malay/malay-common.json
@@ -16,6 +16,7 @@
         "date": "Tarikh",
         "action" : "Tindakan",
         "sender" : "Penghantar",
-        "receiver" : "Penerima"
+        "receiver" : "Penerima",
+        "reason" : "Sebab"
     }
 }
