Add cancel and optional into common json. Add confirmation into modal json. Minor edit in Storage and Token. Add i18n into requestModal. Trial i18n into Confirmation popup.

--- a/public/locales/English/English-common.json
+++ b/public/locales/English/English-common.json
@@ -6,7 +6,8 @@
         "save": "Save",
         "upload": "Upload",
         "download": "Download",
-        "bulk_process": "Bulk Process"
+        "bulk_process": "Bulk Process",
+        "cancel": "Cancel"
     },
     "table": {
         "name": "Name",
@@ -18,5 +19,6 @@
         "sender": "Sender",
         "receiver": "Receiver",
         "reason": "Reason"
-    }
+    },
+    "optional": "Optional"
 }
