Major Addition in modal json. minor addition in common json. Edit i18n into confirmation Popup.

--- a/public/locales/English/English-common.json
+++ b/public/locales/English/English-common.json
@@ -7,7 +7,10 @@
         "upload": "Upload",
         "download": "Download",
         "bulk_process": "Bulk Process",
-        "cancel": "Cancel"
+        "cancel": "Cancel",
+        "confirm": "Confirm",
+        "prev": "Prev",
+        "next": "Next"
     },
     "table": {
         "name": "Name",
