--- a/public/locales/Malaysia/Malaysia-modal.json
+++ b/public/locales/Malaysia/Malaysia-modal.json
@@ -1,5 +1,23 @@
 {
-    "confirmation": {
-        "title": "Kepastian"
+    "group": {
+        "add_title": "Tambah Kumpulan",
+        "update_title": "Kemas kini Kumpulan",
+        "description": "Deskripsi",
+        "code": "kod",
+        "sucess_toast": "Berjaya",
+        "error_toast": "Gagal"
+    },
+    "delete_group": {
+        "message1": "Adakah anda yakin untuk padam kumpulan ",
+        "message2": "Tindakan ini tidak boleh dikembalikan. Sila sahkan keputusan anda."
+    },
+    "group_user": {
+        "title": "Senarai Pengguna",
+        "button_add": "Tambah Pengguna",
+        "not_found": "Tiada pengguna ditemui"
+    },
+    "user_bulk": {
+        "download": "Muat turun template",
+        "drag": "Seret & lepas fail di sini, atau klik untuk memuat naik."
     }
 }
