Update admin json in users.user. Update modal json. Edit i18n into UserManagement

--- a/public/locales/English/English-admin.json
+++ b/public/locales/English/English-admin.json
@@ -10,7 +10,13 @@
         "user": {
             "title": "User Management",
             "add": "Add User",
-            "search": "Search User"
+            "search": "Search User",
+            "bulk_add": "Create User",
+            "bulk_update": "Update User",
+            "bulk_remove": "Remove User",
+            "assign_group": "Assign User to Group",
+            "filter_check": "Filter User By Group",
+            "not_found": "No users found."
         },
         "group": {
             "title": "Group Management",
