--- a/public/locales/Malaysia/Malaysia-admin.json
+++ b/public/locales/Malaysia/Malaysia-admin.json
@@ -10,7 +10,13 @@
         "user": {
             "title": "Pengurusan Pengguna",
             "add": "Tambah Pengguna",
-            "search": "Cari Pengguna..."
+            "search": "Cari Pengguna...",
+            "bulk_add": "Tambah Pengguna",
+            "bulk_update": "Kemas kini Pengguna",
+            "bulk_remove": "Keluarkan Pengguna",
+            "assign_group": "Masukkan Pengguna ke dalam kumpulan",
+            "filter_check": "Tapis Pengguna mengikut kumpulan",
+            "not_found": "Tiada Pengguna ditemui."
         },
         "group": {
             "title": "Pengurusan Kumpulan",
