Update admin common modal json. Edit i18n into GroupManagement, UserModal, and GroupModal.

--- a/public/locales/English/English-admin.json
+++ b/public/locales/English/English-admin.json
@@ -21,7 +21,8 @@
         "group": {
             "title": "Group Management",
             "add": "Add Group",
-            "search": "Search Group"
+            "search": "Search Group",
+            "not_found": "No groups found."
         },
         "role": {
             "title": "Role Management"
