--- a/public/locales/English/English-common.json
+++ b/public/locales/English/English-common.json
@@ -21,7 +21,11 @@
         "action": "Action",
         "sender": "Sender",
         "receiver": "Receiver",
-        "reason": "Reason"
+        "reason": "Reason",
+        "code": "Code",
+        "description": "Description"
     },
-    "optional": "Optional"
+    "optional": "Optional",
+    "active": "Aktive",
+    "not_active": "Not Active"
 }
