--- a/public/locales/Malaysia/Malaysia-common.json
+++ b/public/locales/Malaysia/Malaysia-common.json
@@ -21,7 +21,11 @@
         "action": "Tindakan",
         "sender": "Penghantar",
         "receiver": "Penerima",
-        "reason": "Sebab"
+        "reason": "Sebab",
+        "code": "Kod",
+        "description": "Deskripsi"
     },
-    "optional": "Jika Mahu"
+    "optional": "Jika Mahu",
+    "active": "Aktif",
+    "not_active": "Tidak Aktif"
 }
