Add 3 new entries into common.json. Update modal json. Edit i18n into userbulkprocessmodal and edit userManagement bulk button.

--- a/public/locales/English/English-common.json
+++ b/public/locales/English/English-common.json
@@ -10,7 +10,8 @@
         "cancel": "Cancel",
         "confirm": "Confirm",
         "prev": "Prev",
-        "next": "Next"
+        "next": "Next",
+        "close": "Close"
     },
     "table": {
         "name": "Name",
@@ -27,5 +28,6 @@
     },
     "optional": "Optional",
     "active": "Aktive",
-    "not_active": "Not Active"
+    "not_active": "Not Active",
+    "drag": "Drag & drop files here, or click to upload."
 }
