Fix some UI/UX code

--- a/public/locales/English/English-sidebar.json
+++ b/public/locales/English/English-sidebar.json
@@ -1,6 +1,6 @@
 {
     "chat": "New Chat",
     "workspace": "Workspace",
-    "Search": "Search",
+    "search": "Search",
     "Recent": "Recent Chats"
 }
