Update RoleManagement. Create eventEmitter for chatEvents. Put chatEvents in Chat and Sidebar

--- a/public/locales/English/English-common.json
+++ b/public/locales/English/English-common.json
@@ -24,7 +24,8 @@
         "receiver": "Receiver",
         "reason": "Reason",
         "code": "Code",
-        "description": "Description"
+        "description": "Description",
+        "permission": "Permission"
     },
     "optional": "Optional",
     "active": "Active",
