--- a/public/locales/English/English-sidebar.json
+++ b/public/locales/English/English-sidebar.json
@@ -2,5 +2,5 @@
     "chat": "New Chat",
     "workspace": "Workspace",
     "search": "Search",
-    "Recent": "Recent Chats"
+    "recent": "Recent Chats"
 }
